# business-document-processing

./: .bumpversion.cfg  .gitignore  API.md  LICENSE  LICENSE.txt  README.md  VERSION  build-requirements.txt  build.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
.reuse/: dep5
doc_inf_ext_exercises/: README.md
examples/: README.md  classification_default_model.ipynb  install_jupyterlab.sh  start_testing_merged_client_library.ipynb  train_and_evaluate_custom_model.ipynb
examples/data/: en-11.json  en_de-43.json  nl-13.json
examples/document_classification_examples/: classification_default_model.ipynb  train_and_evaluate_custom_model.ipynb
examples/document_classification_examples/data/training_data/: de-15.json
examples/document_information_extraction_examples/: client_api_demo.ipynb  gt-sample-invoice-1.json  information_extraction_showcase.ipynb  utils.py
sap-document-classification-client/: constants.py  dc_api_client.py  http_client_base.py  http_request_retry.py
sap_business_document_processing/: __init__.py
sap_business_document_processing/common/: constants.py  exceptions.py  helpers.py  http_client_base.py
sap_business_document_processing/document_classification_client/: __init__.py  constants.py  dc_api_client.py
sap_business_document_processing/document_information_extraction_client/: __init__.py  capabilities.py  constants.py  dox_api_client.py  endpoints.py  helpers.py
sap_document_classification_client/: constants.py  dc_api_client.py  http_client_base.py  http_request_retry.py
