[metadata]
name = sap-business-document-processing
version = file: VERSION
license = apache-2.0
description = Python client library for convenient usage of SAP Business Document Processing services
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexander Bolshakov
author_email = alexander.bolshakov@sap.com
url = https://github.com/sap/business-document-processing
download_url = https://pypi.org/project/sap-business-document-processing
keywords = SAP, business, document, processing, classification, information, extraction, machine learning
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3

[options]
packages = find_namespace:
include_package_data = True
install_requires =
	urllib3 ~= 1.26.0
	requests ~= 2.0
	requests_oauthlib ~= 1.3.0
